# SIR

./: .gitignore  README.md  demo.py  requirement.txt
examples/: demo.py
sir/: README.md  core.py  pyproject.toml
sir/sir/: __init__.py  core.py  embeddings.py  utils.py
