[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sir"
version = "0.1.0"
description = "Self-Iterating Retriever for multi-hop question answering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ngui Seng Wee", email = "nguisw.engineering@gmail.com" }]
keywords = ["retrieval", "question-answering", "nlp", "rag", "multi-hop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = ["numpy>=1.20.0", "requests>=2.25.0"]

[project.optional-dependencies]
sbert = ["sentence-transformers>=2.2.0"]
sklearn = ["scikit-learn>=1.0.0"]
openai = ["openai>=1.0.0"]
huggingface = ["huggingface-hub>=0.12.0"]
cohere = ["cohere>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.12.0",
    "cohere>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ducky777/sir"
"Bug Tracker" = "https://github.com/ducky777/sir/issues"
"Documentation" = "https://sir.readthedocs.io"
"Source Code" = "https://github.com/ducky777/sir"

[tool.hatch.build.targets.wheel]
packages = ["sir"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose"

[tool.coverage.run]
source = ["sir/"]
omit = ["tests/*", "examples/*"]
